Closed Bug 161999 Opened 23 years ago Closed 22 years ago

Mail folder pane does not reflect number of messages in trash

Categories

(SeaMonkey :: MailNews: Message Display, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.4final

People

(Reporter: caillon, Assigned: Bienvenu)

References

Details

(Keywords: regression, Whiteboard: [adt2])

Attachments

(2 files, 1 obsolete file)

Build: 2002080808 linux trunk. Steps to reproduce: 1. Get new mail (send yourself some). POP or IMAP doesn't matter. 2. Right click on it to send to trash. Notice the new mail count in trash now reads (1) and the folder is bold to indicate unread mail. 3. Right click on your trash folder and choose "Empty Trash" Actual results: No visible changes. Expected results: Trash folder updates to show that there is no more new mail. Note: After following these steps, if you subsequently left click on the trash folder to view its messages, things will be as expected. The folder updates properly and no mail is in the trash.
CONFIRM: I use the Trunk build of 11th August.. If the Mail is new and you delete it. (so it is moved to Trash) and you go File->Empty Trash The Status is changed from "New" to "Read" but the Message Count of the Trash still shows that the message is there. You see that the Trash empty when you click on the Trash folder. After doing this, the message count of the Trash folder get's updated. 2.) Case you have read a mail which lies on your inbox, you delete it. The Trash shows that there is 1 message in it. Go File -> Empty Trash. The Trash get's actually emptied, but the message count and state remains the untouched. Just my 2 cents //Carsten
Sorry for the many typos in my commend I saw after posting it.
I think the target is "All". Same problem on MacOS 9.1 2002083017
OS: Linux → All
Hardware: PC → All
*** Bug 163289 has been marked as a duplicate of this bug. ***
Still present in September 1st. Additionally I found out the following. 1. Delete a Mail from your inbox 2. File -> Empty Trash Result: no updated Mail Count for Trash Can. Next do: 1. Delete a Mail from your inbox 2. Go to the Trash Folder 3. Hit Del, to delete the message from the Trash Result: Mail Count gets updated
*** Bug 167122 has been marked as a duplicate of this bug. ***
*** Bug 166769 has been marked as a duplicate of this bug. ***
*** Bug 170912 has been marked as a duplicate of this bug. ***
*** Bug 168689 has been marked as a duplicate of this bug. ***
Sean, Navin, could either one of you help out with this?
I have the same problem. I am using Windows XP Mozilla 1.2b Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.2b) Gecko/20021002
Proctor, This is an XP bug - I have seen it on Solaris, OS/2 and Win32.
I have another computer which is running windows 98, and it has the same problem.
proctor and others : Please read the bug "header". OS is set to "ALL" and that means that you get this on "ALL" Operation Systems. We know about this bug and it's 100% reproduceable and we need no additional comments unless the developer (assigned person: Seth Spitzer) asks.
Flags: wanted1.3a?
Keywords: mozilla1.2
*** Bug 182797 has been marked as a duplicate of this bug. ***
We're not going to hold 1.3a for this. (The "wanted1.3a" flag has been changed to "blocking1.3a" to more accurately reflect how the flag is used by drivers@mozilla.org).
Flags: blocking1.3a? → blocking1.3a-
Might be this is a regression of bug 115453 ?
Between 1.2.1 and 1.3a, a new variant of this bug appeared: When having several mail accounts and downloading, only the currently selected accounts counter is updated, the other ones only appear after selecting the account. Is this regression a side effect of trying to repair this one ?
regression from a patch with no patch ? never...
Using build 2002122004 the trash folder message count never gets updated when emptying trash via the right click menu option, nor via the 'File -> Empty Trash' window menu option. (win2k)
I'm not sure whether this aspect is relevant. Precondition: - three pane setup - the trash folder is the current one - view a message in the trash folder - right click the folder and select 'Empty trash' Result - the message list pane gets cleared - the message count is never not updated - sometimes the message body pane does not get cleared and still displays the deleted message that was being viewed This last aspect does not always happen, I can not force it and I do not know why it does or does not happen.
sorry, forgot to delete 'not' in - the message count is never not updated this should be - the message count is never updated
*** Bug 185039 has been marked as a duplicate of this bug. ***
*** Bug 187959 has been marked as a duplicate of this bug. ***
Still present in the latest win32 nightly build (2003011008), tested under Windows XP Professional SP1. (annoying i might add)
*** Bug 173176 has been marked as a duplicate of this bug. ***
*** Bug 183796 has been marked as a duplicate of this bug. ***
*** Bug 185117 has been marked as a duplicate of this bug. ***
Right, this happens for inbox too.
Summary: Empty trash no longer updates mail count → Mail folder pane does not reflect number of messages in inbox, or trash
Nominating for blocking 1.3b. Drivers: this is a high visible regression that makes mail fairly unusable. Here's why: You are no longer able to tell when you have new mail without manually clicking on the inbox of each account. Moving mails from folder to folder does not update the counts either, so you can move a message from one folder to another, and think you still have mail in one folder because it "claims" you do, when that is not the case.
Flags: blocking1.3b?
Mail triage team: nsbeta1+/adt2
Keywords: nsbeta1nsbeta1+
Whiteboard: [adt2]
*** Bug 189314 has been marked as a duplicate of this bug. ***
*** Bug 175435 has been marked as a duplicate of this bug. ***
accepting. this is the bug Chris Aillon asked me to look into back on 12/6/2002, but I got overloaded / sidetracked. (my apologies, Chris.)
Status: NEW → ASSIGNED
*** Bug 190127 has been marked as a duplicate of this bug. ***
not serious enough to block 1.3beta
Flags: blocking1.3b? → blocking1.3b-
aiming for 1.3 final
Target Milestone: --- → mozilla1.3final
*** Bug 192319 has been marked as a duplicate of this bug. ***
Flags: blocking1.3?
*** Bug 193118 has been marked as a duplicate of this bug. ***
Please set blocking mozilla1.3, this is highly visible, annoying, and should really be fixed before 1.3 is released.
agreed
*** Bug 193244 has been marked as a duplicate of this bug. ***
*** Bug 187821 has been marked as a duplicate of this bug. ***
I can see this behaviour also wih unsent messages folder in local folders. The consequence is, that, if you go online, mozilla does not ask whether to send unsent messages or not. When I go into the unsent messages folder, it recognizes the messages and the next time I go online, it asks again.
*** Bug 187697 has been marked as a duplicate of this bug. ***
Flags: blocking1.3? → blocking1.3+
lpb+moz@focalpoint.com : Please don't change something in a bug if you don't know what it means
Flags: blocking1.3+ → blocking1.3?
This bug should definitely block release of 1.3 final. I hear much too many people complaining about this.
and ? That doesn't give you the right to set blocking1.3+
I just want to comment on the seriousness of this bug and whether it warrants blocking the 1.3 final release. I haven't noticed any problem with updating any folders except the trash. I just moved 6 Bugzilla e-mails from my inbox to my Bugzilla folder and both folders updated just fine. I have noticed that when you start up Mozilla, it does not automatically "pop" your e-mail account unless you actually click on the "Mail and Newsgroups" icon. However, I don't deem either of these problems serious enough to block a release. But what do I know, I'm just a user!
To comment #49: Maybe you don't notice the problem if you only have one account (you will activate it anyway). But with several accounts you cannot see if mail has arrived until you clicked through all your Inboxes. And, besides the irritating wrong count, it has consequences in functionality, e.g., see comment #44. Apart from that, it leaves a really poor impression seeing Mozilla being unable to simply count mails...
Well, I DO have a couple of e-mail accounts. However, as I said, I'm just a normal user and have these accounts set up in different profiles. I don't disagree that this is annoying and probably more so to someone that has to check e-mail accounts that are work-related. However, I still don't think that it's annoying enough to block a release. YES, it SHOULD BE FIXED, along with other bugs that result in Mozilla not operating quite like Netscape Communicator or Netscape 7.0, but I still don't think it's serious enough to block a release. When I report a bug, I do it because I want Mozilla to be the best. I hate I.E. and there are things about Mozilla that I like better than Netscape 7.0 (even though I know that is based on Mozilla). I EXPECT that all my little tweaks will be looked after at some point, but I would say that a stable browser is much more important. I tend to have a case of verbal diarrhea (as if you haven't noticed so, go ahead and laugh), and when I used to write e-mail in Communicator 4.78, which I thought was a good browser, and Netscape crashed when I was almost through, which happened with reasonable frequency, especially within Linux when I was running it on my old 486, THAT was annoying and something that would result in having a release blocked! But I reiterate, I don't think that particular issue warrants blocking the release! Sorry, I know I've gotten on my bandwagon here, but you guys wanted opinions and bug reports so, this is my two (well, probably, 50) cents worth!
Oops! That should have been "I DO agree that this is annoying".
Please stop spamming. Drivers decide whether it will be blocking 1.3. The owner of the bug has aimed it for 1.3. This is not the place for complaining on the progress of the bug.
Still exists in lat night's download 2003021808 Beker
Still exists in last night's download 2003021808 Beker
Using Build 20030220 I find that the InBox updates okay, but only when I touch it with the mouse pointer.
Flags: blocking1.3? → blocking1.3-
*** Bug 182298 has been marked as a duplicate of this bug. ***
*** Bug 194772 has been marked as a duplicate of this bug. ***
*** Bug 194885 has been marked as a duplicate of this bug. ***
sliding to 1.4 alpha. my 1.3 final bug plate is full, (and this is 1.3-) if I can get something before 1.3 final ships, I'll ask drivers for a=.
Target Milestone: mozilla1.3final → mozilla1.4alpha
*** Bug 195055 has been marked as a duplicate of this bug. ***
This is shaping up a possible mostfreq dupe record holder if not fixed before 1.3 goes out into the wild. Just a thought. Too many mailnews bugs for me to use it anyway.
Felix: What do you want to tell us with your comment ? Does it help to fix this bug : No Are there enough developer resources to fix that for 1.3 : No (see comment #60) That you will not use mailnews : Who cares ?
My comment was precisely because of comment 60, hoping out loud someone capable could give the bug assignee a hand.
*** Bug 195306 has been marked as a duplicate of this bug. ***
*** Bug 195633 has been marked as a duplicate of this bug. ***
I am new to Mozilla development, but since this bug is important to me, I am taking a look at the code, and I have a few questions: It seems fairly obvious that this is a window refresh problem. I am following the flow of the "Empty Trash" code, and I see that the Trash folder is actually deleted then recreated. nsMsgLocalMailFolder::CreateSubfolder() calls nsMsgFolder::NotifyItemAdded(), the purpose of which is to notify the certain nsIFolderListener-implementing objects of the change. Is one of these nsIFolderListener-implementing classes responsible for refreshing the window? If so, which one(s)? If not, any ideas on where I should look next? In the meantime, I will continue digging, but any help would be appreciated. Thanks!
I noticed the other day with Win32/1.3b that if you move a bunch of mail from the Junk folder to the Trash folder, it will properly update both new mail counts. This is an anomaly, since most other situations it will not update properly.
*** Bug 197878 has been marked as a duplicate of this bug. ***
*** Bug 198191 has been marked as a duplicate of this bug. ***
*** Bug 198498 has been marked as a duplicate of this bug. ***
Inbox does not display number of unread messages. However, folders with address filters beneath inbox do display number of unread messages.
QA Contact: stephend → nbaca
Trunk build 2003-03-20: WinXP To clarify the original problem reported: It doesn't matter how the messages are deleted (i.e. delete button, delete key, context menu to delete messages). After deleting the messages the account appears correct next to the Trash folder. Empty trash via a right click or the File|Empty Trash menu item and this is when the message count is not updated. Left click on the Trash folder and now the message count is cleared.
Actually, simply left clicking isn't enough. You have to first click to select a different folder, then re-select the Trash folder for the count to update.
thanks ninoschka. I'll see if I can get this done for 1.4 alpha.
*** Bug 200105 has been marked as a duplicate of this bug. ***
This bug still exists in Mozilla 1.4a
I don't know it this is been reported previously but still the bug is there. I have several accounts (three) and click get all new messages, the program plays a sound (meaning you got mail) but no Inbox folder is bolded and no number displayed in brackets. However, when I click on the Inbox that has the new mail the folder is readrawn as expected.
you don't need to say whether this bug still exists or not, as long as this item is open, i think we can assume its not fixed yet...
I said this bug sill exists because the Target Milestone was 1.4 alpha ...
Blocks: 195509
*** Bug 201377 has been marked as a duplicate of this bug. ***
Seth - another test case for me is to setup a mail filter to move POP mail to a folder in under Local Folders - that destination folder doesn't get updated with "new mail" (bold and the count) till you select it. Also - mail filter mail that gets moved to trash appears "read" already - not sure if this update is the same or not as this bug.
*** Bug 200415 has been marked as a duplicate of this bug. ***
No longer blocks: 195509
*** Bug 195509 has been marked as a duplicate of this bug. ***
*** Bug 203410 has been marked as a duplicate of this bug. ***
shooting for beta. sorry for taking months on this, callion.
Target Milestone: mozilla1.4alpha → mozilla1.4beta
Was the problem about "inbox" not being updated added to the summary at the time that "beanladen"'s comment 18 was posted? Because there's a whole entire bug devoted to that problem, Bug 186573. Maybe that should be a duplicate of this? Daniel Küstner's comment 44 and Matthew Kerr's comment 68 seem to me to be problems unrelated to either of the symptoms being covered by this bug.
Comment on attachment 122259 [details] [diff] [review] patch, for the empty trash scenario r/sr=bienvenu
Attachment #122259 - Flags: superreview+
I also got a fix in hand for another scenario: 1) have pop account, set to automatically download new messages 2) start up, don't load the inbox for that account. instead, choose another folder. 3) send mail to that account 4) get new mail 5) the inbox unread / total counts don't update. (the issue reported in http://bugzilla.mozilla.org/show_bug.cgi?id=161999#c78) similar fix, to the trash fix. I'll attach.
Comment on attachment 122268 [details] [diff] [review] patch (fix for bug #186573) obsolete, checked in as part of bug #186573
Attachment #122268 - Attachment is obsolete: true
working on the imap side of the empty trash issue.
Summary: Mail folder pane does not reflect number of messages in inbox, or trash → Mail folder pane does not reflect number of messages in trash
*** Bug 204108 has been marked as a duplicate of this bug. ***
The IMAP side of this works just fine in 1.3 on Linux. As the proverbial "they" say, "Don't fix it if it ain't broke."
after this checkin, when i am in trash and File/Empty trash, mailnews loose all focus. "File"/"Compact folders" becomes disabled, untill i've set focus again by clicking on a folder.
for the filter issue, I'm thinking about something like this: saspitzer: Index: base/src/nsMsgCopyService.cpp =================================================================== RCS file: /cvsroot/mozilla/mailnews/base/src/nsMsgCopyService.cpp,v retrieving revision 1.41 diff -u -w -r1.41 nsMsgCopyService.cpp --- base/src/nsMsgCopyService.cpp 11 Jan 2003 23:09:26 -0000 1.41 +++ base/src/nsMsgCopyService.cpp 2 May 2003 05:23:36 -0000 @@ -173,6 +173,12 @@ m_copyRequests.RemoveElement(aRequest); if (aRequest->m_listener) aRequest->m_listener->OnStopCopy(rv); + + // fix for bug #161999 + // on copy completion, update the unread / total counts + // for the dest folder + if (aRequest->m_dstFolder) + aRequest->m_dstFolder->UpdateSummaryTotals(PR_TRUE); delete aRequest; } but I think it requires a msf file if your target for a filter (or move?) has never had a summary file, you won't get updates. will work more on this (and bug #195827) tomorrow.
*** Bug 204588 has been marked as a duplicate of this bug. ***
Message number updates work OK now after "empty trash". Seth - how's the proposed patch for updating filter moved mail? Inbox filtered messages moved to other folders don't update as new mail and filtered messages moved to "trash" appear as read already.
More - new filtered email deleted to trash, the count doesn't show up at all till you select it. Biff, however, sees it. You just have to start selecting folders till you find the new mail - then the message numbers are displayed for that folder. Working with: Win2k 050610 trunk
James Davis: For me, filtering incoming mail with "Delete message" (only) marks the message as read (1.3 Final, 1.4b-0426). Therefore, I wouldn't expect the unread count of the Trash to increase. Trash folder apparently does not get a 'green arrow' for new mail. See Bug 201917 and Bug 179556 for what I believe you're talking about. I don't think those are dupes of this bug, but others might think differently.
Mike - Yes (maybe) to the first bug you mention but I'm not sure about the second. It appears that Seth is aware of these issues and is working on nailing the updates to message numbering for filtered messages next. I'm not sure of what the mailnews team wants the behaviour to be exactly with filtered "deleted" vs filtered "moved". Given that the filtered mail wasn't read at all but only "moved" to the trash folder, my assumption (there I go again) was that the mail was to be kept unread, the count updated and the folder/number boldened (thus this is what I've been testing). Please correct me if I'm in left field on this.
Mozilla 1.4b under WinXP: Partial resolution -> message count in Trash now updates for me after emptying, but the Size column does not - indicates folder size before emptying until I reselect the Trash folder again.
aiming for 1.4 final
Target Milestone: mozilla1.4beta → mozilla1.4final
taking - I'm able to reproduce this bug for the special case of a filter moving a message to the trash, but not for any other local folder. Christopher, do you see this bug with filters for folders other than the trash?
Assignee: sspitzer → bienvenu
Status: ASSIGNED → NEW
Example: Mail setup to BCC myself. Filter setup to capture mail from me and move it to Local Folders/Sent. Auto-download of POP msgs. Biff barks but the Local Folders/Sent doesn't change to bold + unread of 1. If I select the Sent folder (left mouse button), Sent 1 xxx goes bold (unread count is 1). Selecting the message removes the bold and the "1" as expected. More - deleting that email (Local Folders/Sent) puts it in the Local Folders/Trash . However, emptying trash leaves the size unrefreshed. (same issue for all mail accounts Trash folders)
OK, here's what I know now: 1. Updating of the trash folder size after empty local trash is its own, isolated bug. 2. Lack of green arrow on special folders like Trash and Sent is, I think, simply because we don't have icons for that (that's an educated guess on my part) 3. Counts not updating is because of some stuff someone did for batching of updates. When we go through the batch code, updating works. 4. The reason it sometimes works is another bug - it appears that somehow some folders are listening to the db changes, even when the folder is not open and has not been opened. 5. The fix is probably to force an update on the destination folder - I'll figure out how to do that.
Attached patch proposed fixSplinter Review
this fixes the update of the trash folder size on empty trash, and fixes the counts on the folders when messages are filtered into them. There's not much I can do about the green flag on the special folders if we don't have icons. I'll try to verify that we don't have those icons.
fix checked in, r/sr/a=sspitzer over aim.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment on attachment 123064 [details] [diff] [review] proposed fix we don't have new icons for those folders, or special css for them. just inbox, and non special folders. see http://lxr.mozilla.org/mozilla/source/themes/modern/messenger/folderPane.css
Attachment #123064 - Flags: superreview+
Attachment #123064 - Flags: review+
Attachment #123064 - Flags: approval1.4+
also see http://lxr.mozilla.org/mozilla/source/themes/classic/messenger/folderPane.css last I talked to him, callion made it sound like he could still reproduce the "I filter from my pop inbox to a pop folder, and the dest folder (not selected) unread count doesn't update" problem. caillon@aillon.org, can you try again after bienvenu's fix? And, if you still have the problem, reopen? david, what happens if the our destination folder doesn't have a .msf yet?
Going thru the many symptoms listed in this bug: original report: fixed comment 18 (secondary Inbox not updating): fixed by patch for bug 186573 comment 82 (folders receiving filtered mail not updating): apparently fixed, see also bug 57660 comment 103 ('size' column in tree pane not updating): apparently fixed comment 21 (message pane showing Trash message not clearing): NOT fixed comment 96 (viewing Trash, focus removed from tree on Empty Trash): NOT fixed -- note that the *focus* remains wherever it is, but the tree's selection is removed. comment 44 [by Daniel Küstner] (Unsent messages not updating): unknown, I'm not sure what is being reported there; Bug 198087? Testing done with 1.4b-0516, Windows 2000.
Mike Cowperthwaite: > unknown, I'm not sure what is being reported there; Bug 198087? Looks like, but I'm not sure. I also can't test it now, because I don't have access to Mozilla Mailnews anymore .-(
Trunk build 2003-05-20: WinMe, Mac 10.1.5, Linux RH 8 Verified Fixed (checked IMAP and POP accounts).
Status: RESOLVED → VERIFIED
Following up my comment 112: The unfixed symptom mentioned comment 21 (message pane showing Trash message not clearing on Empty Trash) is bug 144895. The unfixed symptom mentioned in comment 96 (viewing Trash, the focus is removed from tree on Empty Trash) may be part of bug 172392. Incidentally, the people still voting for this bug might want to move their votes to something that needs doing. :)
*** Bug 159347 has been marked as a duplicate of this bug. ***
*** Bug 198285 has been marked as a duplicate of this bug. ***
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: