fix for bug #161999 for local trash folder, empty trash doesn't always update unread / total msg counts. r/sr=bienvenu, a=sspitzer